--- a/silver_isp/views/isp_ap_views.xml
+++ b/silver_isp/views/isp_ap_views.xml
@@ -33,32 +33,101 @@
             <field name="model">isp.ap</field>
             <field name="arch" type="xml">
                 <form string="Equipo AP ISP">
-                    <sheet string="Equipo AP ISP">
-                        <div class="oe_button_box" name="button_box">
-                            <button name="action_connect_ap" type="object" class="oe_stat_button" icon="fa-signal" string="Probar Conexion" invisible="description_brand != 'mk'"/>
-                            <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-arrows-v">
+                <sheet>S
+<div class="oe_button_box" name="button_box"> 
+              
+<button name="action_connect_ap" type="object" class="oe_stat_button" icon="fa-signal" string="Probar Conexion" invisible="description_brand != 'mk'"/>
+
+              <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-arrows-v">
                                 <field string="Contratos" name="contract_count" widget="statinfo"/>
                             </button>
-                        </div>
-                        <widget name="web_ribbon" title="Active" invisible="state == 'down' or description_brand != 'mk'"/>
-                        <widget name="web_ribbon" title="Down" bg_color="bg-danger" invisible="state == 'active' or description_brand != 'mk'"/>
-                        <field name="state" invisible="1"/>
-                        <div class="oe_title">
-                            <h1><field name="name"/></h1>
-                        </div>
-                        <group name="ap">
-                            <group>
-                                <field name="hostname_ap"/>
-                                <field name="software_version"/>
-                                <field name="node_ids" widget="many2many_tags" invisible="1"/>
-                            </group>
-                            <group>
-                                <field name="brand_id"/>
-                                <field name="model"/>
-                                <field name="description_brand" invisible="1"/>
-                            </group>
-                        </group>
-                    </sheet>
+           </div>
+<widget name="web_ribbon" title="Active" invisible="(state == 'down') or (description_brand != 'mk')"/>
+<widget name="web_ribbon" title="Down" bg_color="bg-danger" invisible="(state == 'active') or (description_brand != 'mk')"/>
+                    <field name="state" invisible="1"/>
+            <div class="oe_title">
+<h1>
+<field name="name"/>
+</h1>
+</div>
+<group name="ap">
+<group>
+<field name="hostname_ap"/>
+<field name="software_version"/>
+<field name="node_ids" widget="many2many_tags" invisible="1" can_create="true" can_write="true" readonly="1"/>
+</group>
+<group>
+<field name="brand_id" on_change="1" can_create="false" can_write="false"/>
+<field name="model"/>
+<field name="description_brand" invisible="1" readonly="1"/>
+</group>
+</group>
+<group name="core_conexion" string="Datos Conexion">
+<group>
+<field name="ip"/>
+<field name="port"/>
+</group>
+<group>
+<field name="username"/>
+<field name="password" password="True"/>
+</group>
+</group>
+<group>
+<group name="ip_address" string="Direccionamiento IP">
+<field name="type_access_net" required="1"/>
+<field name="dhcp_custom_server" invisible="type_access_net != 'dhcp_leases'"/>
+<field name="interface" invisible="type_access_net != 'dhcp_leases'"/>
+<field name="is_dhcp_static" invisible="type_access_net != 'ip_fija'" widget="boolean_toggle"/>
+</group>
+<group name="capacity" string="Capacidad Usada AP">
+<field name="capacity_usage_ap" readonly="1"/>
+<field name="is_mgn_mac_onu" widget="boolean_toggle"/>
+</group>
+</group>
+<notebook colspan="4">
+<page string="Direcciones IP" invisible="type_access_net not in ['dhcp', 'dhcp_leases']">
+    <group>
+            <field name="device_pool_ip_ids" nolabel="1">
+                </field>
+</group>
+              <group invisible="1">
+                <field name="ip_address_line_ids" nolabel="1">
+</field>
+              </group>
+              <group invisible="1">
+                <field name="ip_address_ids" nolabel="1">
+                     </field>
+              </group>
+            </page>
+            <page string="Datos Ubicacion">
+            <group string="Datos Ubicacion">
+<group>
+<field name="country_id" can_create="false" can_write="false"/>
+<field name="state_id" can_create="true" can_write="true"/>
+<field name="zip"/>
+</group>
+<group>
+<field name="street"/>
+<field name="street2"/>
+</group>
+</group>
+<group>
+<group string="Geolocalizacion">
+                                <label for="date_localization" string="Geolocalizacion"/>
+                                <div>
+                                    <span>Lat : </span>
+                                    <field name="gps_lat" nolabel="1" class="oe_inline"/>
+                                    <span>, Long: </span>
+                                    <field name="gps_lon" nolabel="1" class="oe_inline"/>
+                                    <br/>
+                                    <span invisible="date_localization == False">Actualizado el: </span>
+                                    <field name="date_localization" nolabel="1" class="oe_inline"/>
+                                </div>
+                    </group>
+</group>
+            </page>
+        </notebook>
+</sheet>
                     <div class="oe_chatter">
                         <field name="message_follower_ids"/>
                         <field name="activity_ids"/>
