--- a/silver_isp/views/isp_cable_views.xml
+++ b/silver_isp/views/isp_cable_views.xml
@@ -12,22 +12,10 @@
                             <field name="name"/>
                             <field name="code"/>
                             <field name="cable_type"/>
-                            <field name="fiber_count"/>
-                            <field name="length"/>
-                            <field name="brand_id"/>
-                            <field name="model"/>
-                            <field name="astate"/>
+                          <field name="line_string_wkt"/>
                         </group>
                         <notebook>
-                            <page string="Route">
-                                <field name="route_asset_ids">
-                                    <tree>
-                                        <field name="name"/>
-                                        <field name="asset_type"/>
-                                        <field name="code"/>
-                                    </tree>
-                                </field>
-                            </page>
+
                             <page string="Notes">
                                 <field name="notes"/>
                             </page>
@@ -49,11 +37,8 @@
             <field name="arch" type="xml">
                 <tree string="Cables">
                     <field name="name"/>
-                    <field name="code"/>
                     <field name="cable_type"/>
-                    <field name="fiber_count"/>
-                    <field name="length"/>
-                    <field name="astate"/>
+                    <field name="line_string_wkt"/>
                 </tree>
             </field>
         </record>
