--- a/silver_isp/views/isp_olt_views.xml
+++ b/silver_isp/views/isp_olt_views.xml
@@ -19,7 +19,8 @@
                     <field name="ip"/>
                     <field name="port"/>
                     <field name="username"/>
-                    <field name="state" widget="badge" decoration-danger="state == 'down'" decoration-success="state == 'active'"/>
+                    <field name="state" widget="badge" decoration-danger="state == 'down'"
+                           decoration-success="state == 'active'"/>
                 </tree>
             </field>
         </record>
@@ -34,11 +35,14 @@
                     </header>
                     <sheet string="Equipo OLT ISP">
                         <div class="oe_button_box" name="button_box">
-                            <button class="oe_stat_button" type="object" name="action_view_olt_cards" icon="fa-arrows-v">
+                            <button class="oe_stat_button" type="object" name="action_view_olt_cards"
+                                    icon="fa-arrows-v">
                                 <field string="Tarjetas OLT" name="olt_card_count" widget="statinfo"/>
                             </button>
-                            <button name="action_connect_olt" type="object" class="oe_stat_button" icon="fa-signal" string="Probar Conexion"/>
-                            <button name="action_create_profile_olt" type="object" class="oe_stat_button" icon="fa-arrows-v" string="Crear Perfiles"/>
+                            <button name="action_connect_olt" type="object" class="oe_stat_button" icon="fa-signal"
+                                    string="Probar Conexion"/>
+                            <button name="action_create_profile_olt" type="object" class="oe_stat_button"
+                                    icon="fa-arrows-v" string="Crear Perfiles"/>
                             <button class="oe_stat_button" type="object" name="action_view_contracts" icon="fa-link">
                                 <field string="Contratos" name="contracts_olt_count" widget="statinfo"/>
                             </button>
@@ -48,15 +52,17 @@
                         <widget name="web_ribbon" title="Down" bg_color="bg-danger" invisible="state == 'active'"/>
                         <field name="state"/>
                         <div class="oe_title">
-                            <h1><label for="name" string="Nombre"/>
-                                <field name="name"/></h1>
+                            <h1>
+                                <label for="name" string="Nombre"/>
+                                <field name="name"/>
+                            </h1>
                         </div>
                         <group name="olt">
                             <group>
                                 <field name="hostname_olt"/>
                                 <field name="software_version"/>
                                 <field name="is_core_baudcom" invisible="1"/>
-                                <field name="core_ids" widget="many2many_tags" invisible="is_core_baudcom != False"/>
+                                <field name="core_ids" widget="many2many_tags" invisible="is_core_baudcom"/>
                                 <field name="bridge_core_id" invisible="1"/>
                                 <field name="is_vsol_marca" invisible="1"/>
                                 <field name="is_brand_zte" invisible="1"/>
@@ -78,114 +84,124 @@
                             </group>
                             <group>
                                 <field name="is_multi_user_olt" widget="boolean_toggle"/>
-                                <field name="username" invisible="is_multi_user_olt == True"/>
+                                <field name="username" invisible="is_multi_user_olt"/>
                                 <field name="password" password="True"/>
-                                <button class="oe_inline oe_link " name="action_send_password" string=" →Enviar Contraseña" type="object"/>
+                                <button class="oe_inline oe_link " name="action_send_password"
+                                        string=" →Enviar Contraseña" type="object"/>
                                 <field name="secret_olt"/>
                             </group>
                         </group>
                         <notebook colspan="4">
                             <page name="config" string="Configuraciones Generales">
-                             <group string="Tipo de Conexion">
+                                <group string="Tipo de Conexion">
 
-<group id="config1">
+                                    <group id="config1">
 
-<field name="is_pppoe" widget="boolean_toggle" on_change="1" modifiers="{}"/>
-<field name="is_ipoe" widget="boolean_toggle" on_change="1" modifiers="{}"/>
-<field name="is_mgn_service_port" widget="boolean_toggle" modifiers="{}"/>
-<field name="ges_gemport" invisible="is_mgn_service_port == False"/>
-<field name="g_name_service" invisible="is_mgn_service_port == False"/>
-<field name="is_custom_tcont" widget="boolean_toggle" modifiers="{}"/>
-<field name="tcont" invisible="is_custom_tcont == False"/>
-<field name="is_custom_gempor" widget="boolean_toggle" modifiers="{}"/>
-<field name="gemport" invisible="is_custom_gempor == False"/>
+                                        <field name="is_pppoe" widget="boolean_toggle" on_change="1"/>
+                                        <field name="is_ipoe" widget="boolean_toggle" on_change="1"/>
+                                        <field name="is_mgn_service_port" widget="boolean_toggle"/>
+                                        <field name="ges_gemport" invisible="not is_mgn_service_port"/>
+                                        <field name="g_name_service" invisible="not is_mgn_service_port"/>
+                                        <field name="is_custom_tcont" widget="boolean_toggle"/>
+                                        <field name="tcont" invisible="not is_custom_tcont"/>
+                                        <field name="is_custom_gempor" widget="boolean_toggle"/>
+                                        <field name="gemport" invisible="not is_custom_gempor"/>
 
-<field name="is_line_nap" widget="boolean_toggle" modifiers="{}"/>
-<field name="is_gestion_pppoe" widget="boolean_toggle" modifiers="{}"/>
-</group>
-<group id="config2">
- <field name="is_extract_mac_onu" widget="boolean_toggle" modifiers="{}"/>
- <field name="is_control_mac_learn" widget="boolean_toggle" modifiers="{}"/>
- <field name="is_activation_bridge" widget="boolean_toggle" modifiers="{}"/>
+                                        <field name="is_line_nap" widget="boolean_toggle"/>
+                                        <field name="is_gestion_pppoe" widget="boolean_toggle"/>
+                                    </group>
+                                    <group id="config2">
+                                        <field name="is_extract_mac_onu" widget="boolean_toggle"/>
+                                        <field name="is_control_mac_learn" widget="boolean_toggle"/>
+                                        <field name="is_activation_bridge" widget="boolean_toggle"/>
 
-<field name="is_cutoff_reconnection" widget="boolean_toggle" modifiers="{}"/>
-<field name="is_disable_onu" widget="boolean_toggle" invisible="is_cutoff_reconnection == False"/>
-<field name="is_shutdown_interface" widget="boolean_toggle" invisible="is_cutoff_reconnection == False"/>
-<field name="is_cutoff_port" widget="boolean_toggle" modifiers="{}"/>
-<field name="is_reduce_script" widget="boolean_toggle" modifiers="{}"/>
-<field name="is_redirect_srvport" widget="boolean_toggle" modifiers="{}"/>
-<field name="is_active_wan_onu" widget="boolean_toggle" modifiers="{}"/>
-</group>
-</group>
-<group>
-<group id="config3">
+                                        <field name="is_cutoff_reconnection" widget="boolean_toggle"/>
+                                        <field name="is_disable_onu" widget="boolean_toggle"
+                                               invisible="not is_cutoff_reconnection"/>
+                                        <field name="is_shutdown_interface" widget="boolean_toggle"
+                                               invisible="not is_cutoff_reconnection"/>
+                                        <field name="is_cutoff_port" widget="boolean_toggle"/>
+                                        <field name="is_reduce_script" widget="boolean_toggle"/>
+                                        <field name="is_redirect_srvport" widget="boolean_toggle"/>
+                                        <field name="is_active_wan_onu" widget="boolean_toggle"/>
+                                    </group>
+                                </group>
+                                <group>
+                                    <group id="config3">
 
-<field name="ont_srvprofile" modifiers="{}"/>
-<field name="ont_srvprofile_value" invisible="ont_srvprofile == 'idp'"/>
-<field name="ont_lineprofile" modifiers="{}"/>
-<field name="ont_lineprofile_value" invisible="ont_lineprofile != 'idu'"/>
-<field name="send_srvprofile" widget="boolean_toggle" modifiers="{}"/>
-<field name="port_vlan" widget="boolean_toggle" invisible="is_vsol_marca == False"/>
-<field name="wan_maximum" widget="boolean_toggle" invisible="is_vsol_marca == False"/>
-<field name="name_service" invisible="is_vsol_marca == False"/>
-</group>
-<group id="config4">
-<field name="type_access_net" modifiers="{&quot;required&quot;: true}"/>
-<field name="dhcp_custom_server" invisible="type_access_net != 'dhcp_leases'"/>
+                                        <field name="ont_srvprofile"/>
+                                        <field name="ont_srvprofile_value" invisible="ont_srvprofile == 'idp'"/>
+                                        <field name="ont_lineprofile"/>
+                                        <field name="ont_lineprofile_value" invisible="ont_lineprofile != 'idu'"/>
+                                        <field name="send_srvprofile" widget="boolean_toggle"/>
+                                        <field name="port_vlan" widget="boolean_toggle"
+                                               invisible="not is_vsol_marca"/>
+                                        <field name="wan_maximum" widget="boolean_toggle"
+                                               invisible="not is_vsol_marca"/>
+                                        <field name="name_service" invisible="not is_vsol_marca"/>
+                                    </group>
+                                    <group id="config4">
+                                        <field name="type_access_net" required="1"/>
+                                        <field name="dhcp_custom_server" invisible="type_access_net != 'dhcp_leases'"/>
 
-<field name="traffic_table" modifiers="{}"/>
-<field name="is_control_traffic_profile" widget="boolean_toggle" invisible="is_brand_zte == False"/>
-<field name="is_not_user_encap_ipoe" widget="boolean_toggle" modifiers="{}"/>
-<field name="is_uplink_port_vlan" widget="boolean_toggle" modifiers="{}"/>
-<field name="is_product_vlan" widget="boolean_toggle" modifiers="{}"/>
-<field name="is_custom_pon_vlan" widget="boolean_toggle" modifiers="{}"/>
-<field name="service_port_internet" invisible="is_vsol_marca == False"/>
-</group>
-</group>
-<group string="Ancho de Banda" invisible="description != 'vsol'">
-<field name="description" invisible="1" modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
-<field name="is_control_bandwidth" widget="boolean_toggle" modifiers="{}"/>
-<field name="is_control_upstream" widget="boolean_toggle" invisible="is_control_bandwidth == False"/>
-</group>
-<group string="VSOL Profiles">
-<group>
-<field name="profile_onu_generic" modifiers="{}"/>
-<field name="profile_dba_gestion" modifiers="{}"/>
-<field name="profile_dba_internet" modifiers="{}"/>
-</group>
-<group>
-<field name="dhcp_client" widget="boolean_toggle" invisible="1" modifiers="{&quot;invisible&quot;: true}"/>
-<field name="is_serial_onu_hex" widget="boolean_toggle" on_change="1" modifiers="{}"/>
-<field name="is_serial_onu_ascii" widget="boolean_toggle" on_change="1" modifiers="{}"/>
-</group>
-</group>
-<group>
-<group>
-<field name="is_virtual" widget="boolean_toggle" modifiers="{}"/>
-</group>
-<group>
-<field name="brand_description" invisible="1" modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
-<field name="isp_core_port_line_id" options="{'no_create': True,  'no_open': True}" invisible="brand_description != 'hua'" can_create="true" can_write="true"/>
-</group>
-</group>
-<group name="olt_tr">
-<group string="TR-069">
-<field name="is_active_tr" widget="boolean_toggle" modifiers="{}"/>
-</group>
-<group string="DNS" invisible="is_v2_brand_zte == False">
-<field name="is_v2_brand_zte" invisible="1" modifiers="{&quot;invisible&quot;: true, &quot;readonly&quot;: true}"/>
-<field name="primary_dns" modifiers="{}"/>
-<field name="secondary_dns" modifiers="{}"/>
-</group>
-</group>
-<group>
-<group string="Configuracion OLT">
-<field name="is_write_olt" widget="boolean_toggle" modifiers="{}"/>
-</group>
-<group string="Configuracion ONT" invisible="description != 'zte'">
-<field name="is_enable_remote_access_onu" widget="boolean_toggle" modifiers="{}"/>
-</group>
-</group>
+                                        <field name="traffic_table"/>
+                                        <field name="is_control_traffic_profile" widget="boolean_toggle"
+                                               invisible="not is_brand_zte"/>
+                                        <field name="is_not_user_encap_ipoe" widget="boolean_toggle"/>
+                                        <field name="is_uplink_port_vlan" widget="boolean_toggle"/>
+                                        <field name="is_product_vlan" widget="boolean_toggle"/>
+                                        <field name="is_custom_pon_vlan" widget="boolean_toggle"/>
+                                        <field name="service_port_internet" invisible="not is_vsol_marca"/>
+                                    </group>
+                                </group>
+                                <group string="Ancho de Banda" invisible="description != 'vsol'">
+                                    <field name="description" invisible="1" readonly="1"/>
+                                    <field name="is_control_bandwidth" widget="boolean_toggle"/>
+                                    <field name="is_control_upstream" widget="boolean_toggle"
+                                           invisible="not is_control_bandwidth"/>
+                                </group>
+                                <group string="VSOL Profiles">
+                                    <group>
+                                        <field name="profile_onu_generic"/>
+                                        <field name="profile_dba_gestion"/>
+                                        <field name="profile_dba_internet"/>
+                                    </group>
+                                    <group>
+                                        <field name="dhcp_client" widget="boolean_toggle" invisible="1"/>
+                                        <field name="is_serial_onu_hex" widget="boolean_toggle" on_change="1"/>
+                                        <field name="is_serial_onu_ascii" widget="boolean_toggle" on_change="1"/>
+                                    </group>
+                                </group>
+                                <group>
+                                    <group>
+                                        <field name="is_virtual" widget="boolean_toggle"/>
+                                    </group>
+                                    <group>
+                                        <field name="brand_description" invisible="1" readonly="1"/>
+                                        <field name="isp_core_port_line_id"
+                                               options="{'no_create': True,  'no_open': True}"
+                                               invisible="brand_description != 'hua'" can_create="true"
+                                               can_write="true"/>
+                                    </group>
+                                </group>
+                                <group name="olt_tr">
+                                    <group string="TR-069">
+                                        <field name="is_active_tr" widget="boolean_toggle"/>
+                                    </group>
+                                    <group string="DNS" invisible="not is_v2_brand_zte">
+                                        <field name="is_v2_brand_zte" invisible="1" readonly="1"/>
+                                        <field name="primary_dns"/>
+                                        <field name="secondary_dns"/>
+                                    </group>
+                                </group>
+                                <group>
+                                    <group string="Configuracion OLT">
+                                        <field name="is_write_olt" widget="boolean_toggle"/>
+                                    </group>
+                                    <group string="Configuracion ONT" invisible="description != 'zte'">
+                                        <field name="is_enable_remote_access_onu" widget="boolean_toggle"/>
+                                    </group>
+                                </group>
                             </page>
 
                             <page name="ip_addresses" string="Direcciones IP">
@@ -200,6 +216,19 @@
                                     </tree>
                                 </field>
                             </page>
+
+
+                            <page string="Puertos">
+                                   <field name="port_ids" >
+                <tree string="Puertos OLT ISP" default_order="name desc">
+                    <field name="name"/>
+                    <field name="num_port"/>
+                    <field name="olt_card_n"/>
+                    <field name="type_access_net"/>
+                </tree>
+            </field>
+                            </page>
+
 
                         </notebook>
                     </sheet>
