--- a/silver_isp/views/isp_splice_closure_views.xml
+++ b/silver_isp/views/isp_splice_closure_views.xml
@@ -9,13 +9,20 @@
                 <form string="Manga">
                     <sheet>
                         <group>
+                        <group>
                             <field name="name"/>
                             <field name="code"/>
-                            <field name="closure_type"/>
+                            <field name="node_id"/>
+                            <field name="zone_id"/>
+                            </group>
+                            <group>
+                                                        <field name="closure_type"/>
                             <field name="capacity"/>
                             <field name="brand_id"/>
                             <field name="model"/>
                             <field name="astate"/>
+
+                            </group>
                         </group>
                         <notebook>
                             <page string="Location">
@@ -50,7 +57,10 @@
             <field name="arch" type="xml">
                 <tree string="Mangas">
                     <field name="name"/>
-                    <field name="code"/>
+                    
+                                                <field name="node_id"/>
+                            <field name="zone_id"/>
+
                     <field name="closure_type"/>
                     <field name="capacity"/>
                     <field name="astate"/>
