graficos, pre reunion con jefes

--- a/silver_isp/views/isp_core_views.xml
+++ b/silver_isp/views/isp_core_views.xml
@@ -34,10 +34,7 @@
                 <form string="Equipo Core ISP">
                     <header>
                         <button name="create_ap" string="Crear Equipo AP" type="object"/>
-                        <button name="create_radius" string="Crear Radius" type="object" invisible="not is_isp_radius"/>  
-                    </header>
-                    <sheet string="Equipo Core ISP">
-                                        <header>
+                        <button name="create_radius" string="Crear Radius" type="object" invisible="not is_isp_radius"/>
                         <button name="button_test_connection" type="object" string="Test Connection" class="oe_highlight"/>
                         <button name="button_get_system_info" type="object" string="Get System Info"/>
                         <button name="button_view_interfaces" type="object" string="View Interfaces"/>
@@ -45,7 +42,9 @@
                         <button name="button_view_ppp_active" type="object" string="View PPP Active"/>
                         <button name="button_view_firewall_rules" type="object" string="View Firewall Rules"/>
                         <button name="button_view_queues" type="object" string="View Queues"/>
+                        <field name="state" widget="statusbar" statusbar_visible="down,active"/>
                     </header>
+                    <sheet string="Equipo Core ISP">
                         <div class="oe_button_box" name="button_box"> 
                             <button class="oe_stat_button" type="object" name="action_view_olts" icon="fa-arrows-v">
                                 <field string="Equipos OLT" name="olt_count" widget="statinfo"/>
