--- a/silver_isp/views/isp_node_views.xml
+++ b/silver_isp/views/isp_node_views.xml
@@ -55,9 +55,11 @@
                        
                         <div class="oe_title">
                             <h1>
-                                <field name="name" placeholder="Nombre del Nodo"/> - <field name="code" placeholder="Codigo del Nodo"/>
+                                <field name="name" placeholder="Nombre del Nodo"/>
                             </h1>
                         </div>
+                        <group><group>
+                        <field name="code" placeholder="Codigo del Nodo"/></group></group>
                         <notebook name="networks_isp">
                             <page name="geolocaloze" string="Datos Ubicacion">
                                 <group>
